fix logo alignment

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -231,10 +231,12 @@ div.vertical-panel {
 #app-thumb {
     max-width: 85px;
     max-height: 85px;
+    margin-top: var(--wide-margin);
 }
 #app-thumb-wide {
     max-width: 180px;
     max-height: 85px;
+    margin-top: var(--wide-margin);
 }
 #podcast img, #podcast-thumb img, #app-thumb img, #app-thumb-wide img {
     border-radius: 7.5px;
